<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76C2AF"
    tools:context=".TipActivity">

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/round_up_text"
        app:layout_constraintEnd_toStartOf="@+id/round_up_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_up_text"
        app:srcCompat="@drawable/ic_baseline_near_me_24" />

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/service_question"
        app:layout_constraintEnd_toStartOf="@+id/service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/service_question"
        app:srcCompat="@drawable/ic_baseline_store_24" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.OrtalamaBul.TextView"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/capriola"
        android:text="@string/hizmet_bedeli_ne_kadar"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/servis_cretini_giriniz"
        android:inputType="numberDecimal"
        android:shadowColor="#FFFFFF"
        android:textColor="@color/white"
        android:textColorHint="#77FFFFFF"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_question" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="297dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/cost_of_service"
        app:layout_constraintStart_toStartOf="@+id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service">

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/capriola"
            android:text="@string/harika_20"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/capriola"
            android:text="@string/yi_18"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/capriola"
            android:text="@string/yeterli_15"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginBottom="39dp"
        android:checked="true"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#8BC34A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="@+id/service_question"
        app:layout_constraintStart_toEndOf="@+id/round_up_text"
        app:layout_constraintTop_toTopOf="@+id/round_up_text" />

    <TextView
        android:id="@+id/round_up_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="46dp"
        style="@style/Widget.OrtalamaBul.TextView"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/capriola"
        android:text="@string/tip_ortalamas"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toStartOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="@+id/tip_options"
        app:layout_constraintTop_toBottomOf="@+id/tip_options" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonpurple"
        android:fontFamily="@font/capriola"
        android:text="@string/tip_hesapla"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_text" />

    <TextView
        android:id="@+id/tip_result"
        style="@style/Widget.OrtalamaBul.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola"
        android:text="@string/tip_amount"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        app:layout_constraintVertical_bias="0.345"
        tools:text="Tip Amount: $10" />

    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
        app:layout_constraintEnd_toStartOf="@+id/cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cost_of_service"
        app:srcCompat="@drawable/ic_baseline_room_service_24" />
</androidx.constraintlayout.widget.ConstraintLayout>